--- a/css/box3.css
+++ b/css/box3.css
@@ -53,3 +53,22 @@
     position: relative;
 }
 }
+ @media only screen and (max-width: 500px) {
+    .box3aicono{
+        display: none;
+        width: 0%;
+    }
+    .box3bicono{
+        display: none;
+    }
+    .box3cicono{
+        display: none;
+    }
+    .box3texto{
+        width: 100%;
+        font-size: 12px;
+        color: #1c1c1c;
+        padding: 30px;;
+    }
+
+  }
