--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -24,7 +24,6 @@
         font-size: 12px;
         color: #1c1c1c;
         padding: 30px;;
-        position: relative;
     }
 
   }
